--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -1,32 +1,3 @@
-<%= javascript_include_tag :defaults %> 
-
-<script language="javascript">
- 
-  YAHOO.namespace('yuiresult');
-
-  function initResultDialog() {
-    var handleCancel = function() {
-      this.cancel();
-    }
-
-    YAHOO.yuiresult.resultDialog = new YAHOO.widget.Dialog("resultdlg", {
-       width: "625px",
-       modal: true, 
-       visible: false,
-       fixedcenter: true, 
-       constraintoviewport: true, 
-       draggable: true });
-
-    YAHOO.yuiresult.resultDialog.render();
-  }
-
-  function showResultDialog() {
-    YAHOO.yuiresult.resultDialog.show();
-  }
-
-  YAHOO.util.Event.addListener(window, "load", initResultDialog);
-</script>
-
 <!-- begin: dialog box -->
 <div id="resultdlg">
 </div>
@@ -38,7 +9,7 @@
 <h2><%=_("Services")%></h2>
 <br>
 
-<% if ! @permissions[:execute] %>
+<% unless @permissions[:execute] %>
 <p><%=_("You do not have permission to execute the services. The links are disabled.")%></p>
 <% end %>
 
@@ -54,8 +25,6 @@
                                    :action => "execute", 
                                    :service_id=> service.name 
 			    }
-#			   :loading => "Element.show('progress')"
-#			   :complete => "Element.hide('progress'); showResultDialog();"
 	    %>
 	<%
 	else %>
