fix the browser detection java script

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -20,12 +20,12 @@
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.validate.js"></script>
 
   <!-- browser detection -->
-  <!-- <script type="text/javascript" charset="utf-8" src="/javascripts/jqbrowser-compressed.js"></script>-->
-  <!-- <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.badbrowser.js"></script>-->
+   <script type="text/javascript" charset="utf-8" src="/javascripts/jqbrowser-compressed.js"></script>
+   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.badbrowser.js"></script>
 
-  <!--<script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
+  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.jqModal.js"></script>
   <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.core.js"></script>
-  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>-->
+  <script type="text/javascript" language="javascript" charset="utf-8" src="/inc/jquery.ui.tabs.js"></script>
 
   <script type="text/javascript" charset="utf-8" src="/inc/shortcut.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/yast.widgets.js"></script>
