remove jquery.bt and use the standard jquery.ui dialog

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="/stylesheets/yast.css" type="text/css" media="screen" title="default" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/style.css" type="text/css" media="screen" title="default" charset="utf-8" />
   <link rel="stylesheet" href="/stylesheets/jquery.jqplot.css" type="text/css" media="screen" title="default" charset="utf-8" />
-  <!-- buble tooltips -->
-  <link rel="stylesheet" href="/stylesheets/jquery.bt.css" type="text/css" media="screen" title="default" charset="utf-8" />
+  <link rel="stylesheet" href="/stylesheets/jquery-ui-1.7.2.custom.css" type="text/css" media="screen" title="default" charset="utf-8" />
+
 
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.js"></script>
   <script type="text/javascript" charset="utf-8" src="/inc/jquery.query.js"></script>
@@ -19,9 +19,6 @@
 
   <script type="text/javascript" charset="utf-8" src="/javascripts/script.js"></script>
   <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.validate.js"></script>
-  <!-- buble tooltips -->
-  <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.bt.js"></script>
-
   <!-- browser detection -->
    <script type="text/javascript" charset="utf-8" src="/javascripts/jqbrowser-compressed.js"></script>
    <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.badbrowser.js"></script>
