added route into network

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -15,7 +15,7 @@
 <p>Domain: <%=h @domain %></p>
 
 <h3>Routing</h3>
-<p>Default Route: <%=h "TODO" %></p>
+<p>Default Route: <%=h @default_route %></p>
 
 <a href="/" class="button"><%=_("Back")%></a>
 </div>
