Error handling improved
See http://en.opensuse.org/YaST/Web/Development/Error_Handling
for more information.

New features:
- unhandled ajax errors are displayed in the standard flash messages
  facility, using standard jquery.ui styles
- provide helper report_error to put an exception into the flash
  message area
- popup to examine backtrace and copy to clipboard facility

--- a/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/_patch_summary.html.erb
@@ -1,8 +1,9 @@
-<div class="status_patches">
-  <% unless patch %>
-    <div class="status-icon warning"></div>
-    <%= _("An error occured when loading patch information.") %>
+<%= report_error(error, _("An error occured when loading patch information.")) if error %>
 
+<div class="status_patches">
+  <% unless patch %>    
+    <div class="status-icon warning"></div>    
+    <%= _("No information about patches available") %>
   <% else %>
     <% link_to "patch_updates" do %>
       <% if patch[:security]+patch[:important] > 0 %>
