--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -446,3 +446,16 @@ th.checkbox {
   text-align: center;
 }
 
+.clipboard {
+  display: block;
+  width: 14px;
+  height: 14px;
+  background: transparent url(images/clipboard/button_up.png) no-repeat scroll 0 0;
+  float: left;
+}
+.clipboard:hover {
+  background: transparent url(images/clipboard/button_over.png) no-repeat scroll 0 0;
+}
+.clipboard:active {
+  background: transparent url(images/clipboard/button_down.png) no-repeat scroll 0 0;
+}
