--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -1,4 +1,8 @@
+
+<% content_for :head do %>
 <%= javascript_include_tag :defaults %>
+<% end %>
+
 <% if ActionController::Routing.possible_controllers.include?("patch_updates") %>
   <% javascript_tag do -%>
     $(document).ready( function() {
