--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -12,16 +12,16 @@
     <!-- FIXME move javascript function outside of index -->
     <% javascript_tag do -%>
       function submitTime() {
-        if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
-          alert ("<%= _("Invalid date format. Correct one is dd/mm/yyyy") %>");
-          return false;
-        }
-        if (!$("#currenttime")[0].value.match( /^\d{2}:\d{2}:\d{2}$/)) {
-          alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
-          return false;
-        }
-        Element.show('progress');
-        return true;
+      if (!$("#date_date")[0].value.match( /^\d{2}\/\d{2}\/\d{4}$/)){
+      alert ("<%= _("Invalid date format. Correct one is dd/mm/yyyy") %>");
+      return false;
+      }
+      if (!$("#currenttime")[0].value.match( /^\d{2}:\d{2}:\d{2}$/)) {
+      alert ("<%= _("Invalid time format. Correct one is hh:mm:ss") %>");
+      return false;
+      }
+      Element.show('progress');
+      return true;
       };
     <% end -%>
 
@@ -30,93 +30,67 @@
 
   <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/></div>
   <div class='plugin-content'>
-  <h2><%=_("Configure timezone")%></h2>
-  <% form_tag '/systemtime/update_timezone', :class => 'container' do %>
-    <table summary="<%= _("Table for settings timezone for target machine.") %>">
-      <tr>
-
-        <td>
-          <label for="region">
-            <%=_("Region:")%>
-          </label>
-        </td>
-        <% #region is always non-nil as it is prerequisites which throws exception
-        %>
-        <td>
-          <%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled,
-                                   :class=>'aligned-inputs' %>
-        </td>
-
-      </tr>
-      <tr>
-
-
-        <td>
-          <label for="timezone">
-            <%=_("Timezone:")%>
-          </label>
-        </td>
-
-        <td id="timezones">
+    <h2><%=_("Configure timezone")%></h2>
+    <% form_tag '/systemtime/update', :class => 'container' do %>
+      <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
+      %>
+      <div>
+        <label for="region">
+          <%=_("Region:")%>
+        </label>
+        <%= select_tag "region", options_for_select(@valid, @region.name), :disabled => disabled,
+          :class=>'aligned-inputs' %>
+      </div>
+      <div>
+        <label for="timezone">
+          <%=_("Timezone:")%>
+        </label>
+        <span id="timezones">
           <%= render(:partial => 'timezones',
             :locals => {:region => @region, :default => @timezone,
               :disabled => disabled})  %>
-        </td>
-      </tr>
-
+        </span>
+      </div>
       <% if @utcstatus != "UTConly" %>
 
-        <tr>
-          <td>
-            <label for="utc">
-              <%=_("Hardware clock is set to UTC")%>
-            </label>
-          </td>
-          <td>
-            <% #don't use check_box helper as it generate also hidden opposite value
-            %>
-            <input type="checkbox" name="utc" id="utc" value="true"
-              <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
-              <%=  "disabled=\"disabled\"" if disabled %> />
-          </td>
-        </tr>
-
+        <div>
+          <label for="utc">
+            <%=_("Hardware clock is set to UTC")%>
+          </label>
+          <% #don't use check_box helper as it generate also hidden opposite value
+          %>
+          <input type="checkbox" name="utc" id="utc" value="true"
+          <%=  "checked=\"checked\"" if @utcstatus == "UTC"%>
+                 <%=  "disabled=\"disabled\"" if disabled %> />
+        </div>
       <% end %>
-    </table>
-    <p>
-    <%= submit_tag _("Save timezone"), :onclick=>"Element.show('progress')", :disabled=> disabled, :class => 'button' -%>
-    </p>
-  <% end %>
-  <h2><%=_("Manually configure time")%></h2>
-  <% form_tag '/systemtime/update_time', :class => 'container' do %>
-    <table summary="<%= _("Manual time configuration table, where user selects data and time for target machine") %>">
-      <tr>
-        <td>
-          <label for="date_date">
-            <%= _("Date:") %>
-          </label>
-        </td>
-        <td>
-          <%= text_field "date","date", :class => 'datepicker aligned-inputs', 
-            :disabled=> disabled, :value => @date
-        %>
-        </td>
-      </tr>
 
-      <tr>
-        <td>
-          <label for="currenttime">
-            <%= _("Time:") %>
-          </label>
-        </td>
-        <td><%= text_field_tag "currenttime", @time, :disabled=> disabled, :class=>'aligned-inputs' %></td>
-      </tr>
-    </table>
-    <p>
-      <%= submit_tag _("Save time"), :onclick=>"return submitTime()",
-                                :disabled=> disabled, :class => 'button' -%>
-    </p>
-  <% end %>
+      <div>
+        <input type="radio" name="timeconfig" value="manual" />
+        <%=_("Manually configure time")%>
+      </div>
+      <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
+      %>
+      <div>
+        <label for="date_date">
+          <%= _("Date:") %>
+        </label>
+
+        <%= text_field "date","date", :class => 'datepicker aligned-inputs',
+          :disabled=> disabled, :value => @date
+      %>
+      </div>
+      <div>
+        <label for="currenttime">
+          <%= _("Time:") %>
+        </label>
+
+        <span><%= text_field_tag "currenttime", @time, :disabled=> disabled, :class=>'aligned-inputs' %></span>
+      </div>
+      <div>
+        <%= form_send_buttons ({:disabled => disabled, :onclick => "submitTime();"}) %>
+      </div>
+    <% end %>
   </div>
 
   <%= observe_field(:region,
