--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -66,7 +66,7 @@
       <% end %>
 
       <div>
-        <input type="radio" name="timeconfig" value="manual" />
+        <input type="radio" name="timeconfig" value="manual" checked="true"/>
         <%=_("Manually configure time")%>
       </div>
       <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
