using link_to and image_tag

--- a/webclient/app/views/layouts/main.rhtml
+++ b/webclient/app/views/layouts/main.rhtml
@@ -38,7 +38,7 @@
     
     <div id="header">
       
-      <a href="/"><img src="/images/webyast-logo.png" alt="webyast" /></a>
+      <%= link_to(image_tag("/images/webyast-logo.png", :alt =>"webyast" ),"/")  %>
       
       <h1>My Appliance</h1>
 
