Added DNS to the network view+controller.
It is faked because of API mismatch :(

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -13,6 +13,8 @@
 <h3>DNS</h3>
 <p>Hostname: <%=h @name %></p>
 <p>Domain: <%=h @domain %></p>
+<p>Name Servers: <%=h @nameservers %></p>
+<p>Search Domains: <%=h @searchdomains %></p>
 
 <h3>Routing</h3>
 <p>Default Route: <%=h @default_route %></p>
