Display interface settings (still faked, REST is not ready).

--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -6,9 +6,10 @@
 
 <h3>IP Address</h3>
 
-<p>Configuration Mode: <%=h "TODO" %></p>
-<p>IP Address: <%=h "TODO" %></p>
-<p>Netmask: <%=h "TODO" %></p>
+<p>Interface: <%=h @iface %></p>
+<p>Configuration Mode: <%=h @conf_mode %></p>
+<p>IP Address: <%=h @ip %></p>
+<p>Netmask: <%=h @netmask %></p>
 
 <h3>DNS</h3>
 <p>Hostname: <%=h @name %></p>
