prototype of log viewer

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -2,6 +2,10 @@
 <div class='plugin-content'>
 <h2><%=_("Status")%></h2>
 
+<h3><%= _("Events") %></h3>
+
+
+
 <% column = 1 %>
 <% @data_group.keys.sort.each do |key| %>
   <% map = @data_group[key]%>
