--- a/webclient/app/views/hosts/index.html.erb
+++ b/webclient/app/views/hosts/index.html.erb
@@ -3,7 +3,7 @@
 <div class="services-list dialoge-wrapper width-65">
   <div class="dialoge-sub-wrapper">
   
-    <h2>Please choose a service:</h2>
+    <h2><%= _("Please choose a service:") %></h2>
     <ul class="list-2level-inline alternate-rows">
       <% for host in @hosts %>
       <li>
