added translation tags

--- a/plugins/patch_updates/app/views/patch_updates/index.html.erb
+++ b/plugins/patch_updates/app/views/patch_updates/index.html.erb
@@ -10,7 +10,7 @@
   </style>
   <div class='plugin-icon'><img src='/icons/yast-online_update.png'/></div>
   <div class='plugin-content'>
-  <h2>Updates</h2>
+  <h2><%=_("Updates") %></h2>
   <div class="loading"></div>
   <% if @patch_updates.empty? %>
     <h3><%=_("Your system is up to date.") %></h3>
