--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -1,6 +1,6 @@
 <div class='plugin-icon'><img src='/images/monitoring.png'/></div>
 <div class='plugin-content'>
-<h2>Status</h2>
+<h2><%=_("Status")%></h2>
 
 <% column = 1 %>
 <% @data_group.keys.sort.each do |key| %>
