--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -7,8 +7,8 @@
 <table class="list">
   <tr>
     <th width=350><%=_("Status Path")%></th>
-    <th width=100><%=_("Limit Value")%></th>
-    <th width=40><%=_("Maximum Reached") %></th>
+    <th width=100><%=_("Minimum Value")%></th>
+    <th width=100><%=_("Maximum Value") %></th>
   </tr>
 
   <% @data_group.each do |key, map| %>
@@ -20,20 +20,17 @@
 
         <% if  @limits_list.has_key?(limit_key)  %>
           <td>
-          <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][0][1] %>>
+            <input name=<%= limit_key+"/min" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][:min][0][1] %>>
           </td>
-          <td class="checkbox">
-          <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
-            <%= @limits[limit_key]["maximum"] ? "checked" : "" %>
-           <%= "disabled=\"disabled\"" if disabled %> />
+          <td>
+            <input name=<%= limit_key+"/max" %> type="text" size="10" maxlength="15" value=<%= @limits_list[limit_key][:max][0][1] %>>
           </td>
         <% else %>
           <td>
-          <input name=<%= limit_key+"/value" %> type="text" size="10" maxlength="15" value=0>
+            <input name=<%= limit_key+"/min" %> type="text" size="10" maxlength="15" value="">
           </td>
-          <td class="checkbox">
-          <input type="checkbox" name= <%= limit_key+"/maximum" %> id=<%= limit_key+"/maximum" %> value="true"
-           <%= "disabled=\"disabled\"" if disabled %> />
+          <td>
+            <input name=<%= limit_key+"/max" %> type="text" size="10" maxlength="15" value="">
           </td>
         <% end %>
         </tr>
