take the correct icon path

--- a/webclient/app/views/controlpanel/index.rhtml
+++ b/webclient/app/views/controlpanel/index.rhtml
@@ -73,7 +73,7 @@
       <div class="highlight-bg">
       <% end %>
         <% link_to (data['url']) do %>
-          <%= image_tag(data['icon']) %>
+          <img src="<%= data['icon'] %>"/>
           <p>
             <%= data['title'] %>
           </p>
