--- a/webclient/app/views/controlpanel/show_all.rhtml
+++ b/webclient/app/views/controlpanel/show_all.rhtml
@@ -15,7 +15,7 @@
       <% end %>
       
       <% link_to (data['url']) do %>
-        <%= image_tag(data['icon']) %>
+        <img src="<%= data['icon'] %>"/>
         <p>
           <%= data['title'] %>
         </p>
