add busy style definition

--- a/webclient/public/stylesheets/style.css
+++ b/webclient/public/stylesheets/style.css
@@ -459,3 +459,7 @@ th.checkbox {
 .clipboard:active {
   background: transparent url(images/clipboard/button_down.png) no-repeat scroll 0 0;
 }
+
+.busy {
+  background: transparent url(images/spinner.gif) no-repeat scroll 0 0;
+}
