--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -4,23 +4,26 @@
 
 <% disabled = ! @permissions[:write] %>
 
-<% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put } ) do |f| %>
+<div class="table">
+  <table class="list">
+  <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put } ) do |f| %>
   <%= f.error_messages %>
-  <div class="table">
-    <table class="list" cellpadding="0" cellspacing="0">
     <tr class="bg">
 	<td class="first"><strong><%=_("Password")%></strong></td>
 	<td class="last"><%= f.password_field :password, :disabled => disabled %></td>
+	<td><%= f.submit _("Save"), :disabled => disabled %></td>
     </tr>
+  <% end %>
+  <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put } ) do |f| %>
+  <%= f.error_messages %>
     <tr class="bg">
 	<td class="first"><strong><%=_("Forward mail to")%></strong></td>
 	<td class="last"><%= f.text_field :aliases, :disabled => disabled %></td>
+	<td><%= f.submit _("Save"), :disabled => disabled %></td>
     </tr>
-    </table>
-    <p>
-	<%= f.submit _("Save"), :disabled => disabled %>
-	<%= link_to _('Back'), {:action => :index}, :onclick=>"Element.show('progress')", :class => "button"%>
-    </p>
-  </div>
-<% end %>
+  <% end %>
+  </table>
+</div>
+
+<%= link_to _('Back'), {:action => :index}, :onclick=>"Element.show('progress')", :class => "button"%>
 
