--- a/webclient/app/views/controlpanel/_select_language.html.erb
+++ b/webclient/app/views/controlpanel/_select_language.html.erb
@@ -1,4 +1,23 @@
 
 <div class="language_selection">
-  <%= show_language %>
+  <div id="language_icons">
+     <div>
+       <%= show_language %>
+     </div>
+  </div>
+
+  <script type="text/javascript">
+     $(document).ready(
+          function() {
+           // define a dialog with available language icons
+           $('#language_icons').dialog(
+           {
+    	     bgiframe: true,
+    	     autoOpen: false,
+    	     height: 300,
+    	     modal: true
+           });
+           $('#language_icons').dialog('open');
+      });
+  </script>
 </div>
