--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -41,7 +41,7 @@
 	<td class="last"><%=text_field_tag :ip, @ip, :disabled => disabled %></td>
     </tr>
     <tr>
-	<td class="first" width="120"><strong><%=_("Netmask")%></strong></td>
+	<td class="first" width="120"><strong><%=_("Prefixlen")%></strong></td>
 	<td class="last"><%=text_field_tag :netmask, @netmask, :disabled => disabled %></td>
     </tr>
     </table>
