--- a/plugins/network/app/views/network/index.html.erb
+++ b/plugins/network/app/views/network/index.html.erb
@@ -5,7 +5,7 @@
 <% disabled = ! @permissions[:write] %>
 
 
-<% form_tag("/network", :method => "get") do |f| %>
+<% form_tag("/network", :method => "get") do %>
   <!-- (collection, value, text, selected) -->
   <div class="table">
     <table class="list" cellpadding="0" cellspacing="0">
