Change tittle for time module (bnc #539200)

--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -30,7 +30,7 @@
 
   <div class='plugin-icon'><img src='/icons/yast-ntp-client.png' alt="time module"/></div>
   <div class='plugin-content'>
-    <h2><%=_("Configure timezone")%></h2>
+    <h2><%=_("Time")%></h2>
     <% form_tag '/systemtime/update', :class => 'container' do %>
       <% #TODO tooltip for form <div> _("Table for settings timezone for target machine.")  </div>
       %>
