--- a/plugins/systemtime/app/views/systemtime/index.rhtml
+++ b/plugins/systemtime/app/views/systemtime/index.rhtml
@@ -66,8 +66,12 @@
       <% end %>
 
       <div>
-        <input type="radio" name="timeconfig" value="manual" checked="true"/>
+        <input type="radio" name="timeconfig" value="none" checked="true"/>
+        <%=_("Don't set time")%>
+        <input type="radio" name="timeconfig" value="manual"/>
         <%=_("Manually configure time")%>
+        <input type="radio" name="timeconfig" value="ntp_sync"/>
+        <%=_("Synchronize via NTP")%>
       </div>
       <% #TODO for tooltip _("Manual time configuration table, where user selects data and time for target machine")
       %>
